<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.puccampinas.coin.Details">
        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/tvNameLabel" />
    <TextView
        android:id="@+id/tvPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceDollar"
        android:textSize="20sp"
        android:layout_below="@id/tvNameLabel"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/tvName"
        android:layout_toEndOf="@id/tvPriceLabel" />
    <TextView
        android:id="@+id/tvPricebLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceBtc"
        android:textSize="20sp"
        android:layout_below="@id/tvPriceLabel"/>
     <TextView
         android:id="@+id/tvPriceb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvPriceLabel"
         android:layout_toEndOf="@id/tvPricebLabel"/>
     <TextView
         android:id="@+id/tv24hVolLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/volume"
         android:textSize="20sp"
         android:layout_below="@id/tvPricebLabel"/>
     <TextView
         android:id="@+id/tv24hVol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvPricebLabel"
         android:layout_toEndOf="@id/tv24hVolLabel"/>
     <TextView
         android:id="@+id/tvMarketCapLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/marketCap"
         android:textSize="20sp"
         android:layout_below="@id/tv24hVolLabel"/>
     <TextView
         android:id="@+id/tvMarketCap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tv24hVol"
         android:layout_toEndOf="@id/tvMarketCapLabel"/>
     <TextView
         android:id="@+id/tvAvaiableLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/avaiable"
         android:textSize="20sp"
         android:layout_below="@id/tvMarketCapLabel"/>
     <TextView
         android:id="@+id/tvAvaiable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvMarketCap"
         android:layout_toEndOf="@id/tvAvaiableLabel"/>
     <TextView
         android:id="@+id/tvTotalLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/total"
         android:textSize="20sp"
         android:layout_below="@id/tvAvaiableLabel"/>
     <TextView
         android:id="@+id/tvTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvAvaiable"
         android:layout_toEndOf="@id/tvTotalLabel"/>
     <TextView
         android:id="@+id/tvPct1hLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pct1h"
         android:textSize="20sp"
         android:layout_below="@id/tvTotalLabel"/>
     <TextView
         android:id="@+id/tvPct1h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvTotal"
         android:layout_toEndOf="@id/tvPct1hLabel"/>
     <TextView
         android:id="@+id/tvPct24hLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pct24h"
         android:textSize="20sp"
         android:layout_below="@id/tvPct1hLabel"/>
     <TextView
         android:id="@+id/tvPct24h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvPct1h"
         android:layout_toEndOf="@id/tvPct24hLabel"/>
     <TextView
         android:id="@+id/tvPct7dLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pct7d"
         android:textSize="20sp"
         android:layout_below="@id/tvPct24hLabel"/>
     <TextView
         android:id="@+id/tvPct7d"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvPct24h"
         android:layout_toEndOf="@id/tvPct7dLabel"/>
     <TextView
         android:id="@+id/tvLastUpdateLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/update"
         android:textSize="20sp"
         android:layout_below="@id/tvPct7dLabel"/>
     <TextView
         android:id="@+id/tvLastUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_below="@id/tvPct7d"
         android:layout_toEndOf="@id/tvLastUpdateLabel"/>
</RelativeLayout>
